--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </nav>
 
     <header id="home">
-        <h1>welcome to our Websites</h1>
+        <h1>welcome to IUEA</h1>
         <p>We build beautiful websites and web apps that help your business grow.</p>
         <a href="#features" class="btn">Our Features</a>
     </header>
